--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
 	<body>
 		<!--import Three.js from CDN -->
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r67/three.min.js"></script>
+		<script src="../lib/OrbitControls.js"></script>
+		<script src="../lib/Detector.js"></script>
 		<script src="./main.js"></script>
 	</body>
 </html>
