--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="./style.css" />
 	</head>
 	<body>
-		<!--import Three.js from CDN -->
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r67/three.min.js"></script>
+		<script src="../lib/three.min.js"></script>
 		<script src="../lib/OrbitControls.js"></script>
 		<script src="../lib/Detector.js"></script>
 		<script src="./main.js"></script>
