Add fluid dynamics class

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
 		<script src="../lib/three.min.js"></script>
 		<script src="../lib/OrbitControls.js"></script>
 		<script src="../lib/Detector.js"></script>
+		<script src="./cs274c.js"></script>
+		<script src="./fluid.js"></script>
 		<script src="./main.js"></script>
 	</body>
 </html>
