--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<script src="../lib/three.min.js"></script>
-		<script src="../lib/OrbitControls.js"></script>
+		<script src="../lib/OrbitControlsEnu.js"></script>
 		<script src="../lib/Detector.js"></script>
 		<script src="./cs274c.js"></script>
 		<script src="./fluid.js"></script>
