Add vector field and updates some things

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>CS270C - Project Name</title>
 		<link rel="stylesheet" type="text/css" href="./style.css" />
+		<meta charset="UTF-8" />
 	</head>
 	<body>
 		<script src="../lib/three.min.js"></script>
