Add fire starting

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="./style.css" />
 		<meta charset="UTF-8" />
 	</head>
-	<body>
+	<body style="padding: 20px;">
 		<script src="../lib/three.min.js"></script>
 		<script src="../lib/OrbitControlsEnu.js"></script>
 		<script src="../lib/Detector.js"></script>
