--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,33 @@
 <html>
-	<head>
-		<title>CS270C - Project Name</title>
-		<link rel="stylesheet" type="text/css" href="./style.css" />
-	</head>
-	<body>
-		<script src="../lib/three.min.js"></script>
-		<script src="../lib/OrbitControls.js"></script>
-		<script src="../lib/Detector.js"></script>
-		<script src="./cs274c.js"></script>
-		<script src="./fluid.js"></script>
-		<script src="./main.js"></script>
-	</body>
+<head>
+<title>CS270C - Project Name</title>
+<link rel="stylesheet" type="text/css" href="./style.css" />
+<script type="x-shader/x-vertex" id="vertexshader">
+    attribute float alpha;
+    varying float vAlpha;
+    void main() {
+        vAlpha = alpha;
+        vec4 mvPosition = modelViewMatrix * vec4( position, 1.0 );
+        gl_PointSize = 20.0;
+        gl_Position = projectionMatrix * mvPosition;
+    }
+</script>
+
+<script type="x-shader/x-fragment" id="fragmentshader">
+    uniform vec3 color;
+    varying float vAlpha;
+    void main() {
+        gl_FragColor = vec4( color, vAlpha );
+    }
+</script>
+</head>
+<body>
+	<script src="../lib/three.min.js"></script>
+	<script src="../lib/OrbitControls.js"></script>
+	<script src="../lib/Detector.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+	<script src="./cs274c.js"></script>
+	<script src="./fluid.js"></script>
+	<script src="./main.js"></script>
+</body>
 </html>
