+Demo videos +Child pages for source and videos

--- a/src/index.html
+++ b/src/index.html
@@ -38,13 +38,14 @@
 		<p>Left click and drag to rotate camera</p>
 		<p>Right click and drag to move camera</p>
 		<p>f - add smoke source at mouse position</p>
+		<p>e - clear smoke sources</p>
 		<p>c - clear smoke</p>
 		<p>s - clear vector field</p>
 		<p>b - toggle background image visibility on/off</p>
-		<br/>
 		<p>
+			<a class="button" href="video.html">Video</a> 
 			<a class="button" href="report.pdf">Report</a> 
-			<a class="button"href="main.js">Source Code</a> 
+			<a class="button" href="source.html">Source Code</a> 
 		</p>
 		<a href="#" onclick="closeWindow()">Close</a>
 	</div>
