Updates for pubished webpage

--- a/src/source.html
+++ b/src/source.html
@@ -1,20 +1,20 @@
 <html>
-<head>
-<title>CS274C - Project Name</title>
-<link rel="stylesheet" type="text/css" href="./style.css" />
-<meta charset="UTF-8" />
-</head>
-<body>
-	<div id="menu">
-		<h1>Source Code</h1>
-		<p>
-			<h2>Project Code</h2>
-			<a href="main.js">main.js</a>
-			<a href="fluid.js">fluid.js</a>
-			
-			<h2>Libraries</h2>
-			<a href="../lib/three.min.js">three.js</a>
-		</p>
-	</div>
-</body>
+	<head>
+		<title>CS274C - Animating Smoke</title>
+		<link rel="stylesheet" type="text/css" href="./style.css" />
+		<meta charset="UTF-8" />
+	</head>
+	<body>
+		<div id="menu">
+			<h1>Source Code</h1>
+			<p>
+				<h2>Project Code</h2>
+				<a href="main.js">main.js</a>
+				<a href="fluid.js">fluid.js</a>
+
+				<h2>Libraries</h2>
+				<a href="../lib/three.min.js">three.js</a>
+			</p>
+		</div>
+	</body>
 </html>
