--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <html>
-<head>
-<title>CS274C - Project Name</title>
-<link rel="stylesheet" type="text/css" href="./style.css" />
-<meta charset="UTF-8" />
-<script type="x-shader/x-vertex" id="vertexshader">
+	<head>
+		<title>CS274C - Animating Smoke</title>
+		<link rel="stylesheet" type="text/css" href="./style.css" />
+		<meta charset="UTF-8" />
+		<script type="x-shader/x-vertex" id="vertexshader">
 			attribute float alpha;
 			varying float vAlpha;
 			void main() {
@@ -14,7 +14,7 @@
 			}
 		</script>
 
-<script type="x-shader/x-fragment" id="fragmentshader">
+		<script type="x-shader/x-fragment" id="fragmentshader">
 			uniform vec3 color;
 			varying float vAlpha;
 			void main() {
@@ -22,39 +22,39 @@
 			}
 		</script>
 
-<script type="text/javascript">
-	function closeWindow() {
-		document.getElementById("menu").style.display="none";
-	}
-</script>
+		<script type="text/javascript">
+			function closeWindow() {
+				document.getElementById("menu").style.display="none";
+			}
+		</script>
 
-</head>
-<body>
-	<div id="menu">
-		<h1>Smoke Animation Using Fluid Dynamics</h1>
-		<h2>by Andre Philipp, Andy Spencer & Haakon Garseg Moerk</h2>
+	</head>
+	<body>
+		<div id="menu">
+			<h1>Smoke Animation Using Fluid Dynamics</h1>
+			<h2>by Andre Philipp, Andy Spencer & Haakon Garseg Mørk</h2>
 
-		<p>Move mouse over vectors to change them</p>
-		<p>Left click and drag to rotate camera</p>
-		<p>Right click and drag to move camera</p>
-		<p>f - add smoke source at mouse position</p>
-		<p>e - clear smoke sources</p>
-		<p>c - clear smoke</p>
-		<p>s - clear vector field</p>
-		<p>b - toggle background image visibility on/off</p>
-		<p>
-			<a class="button" href="video.html">Video</a> 
-			<a class="button" href="report.pdf">Report</a> 
-			<a class="button" href="source.html">Source Code</a> 
-		</p>
-		<a href="#" onclick="closeWindow()">Close</a>
-	</div>
-	<script src="../lib/three.min.js"></script>
-	<script src="../lib/OrbitControlsEnu.js"></script>
-	<script src="../lib/Detector.js"></script>
-	<script src="./cs274c.js"></script>
-	<script src="./fluid.js"></script>
-	<script src="./main.js"></script>
+			<p>Move mouse over vectors to change them</p>
+			<p>Left click and drag to rotate camera</p>
+			<p>Right click and drag to move camera</p>
+			<p>f - add smoke source at mouse position</p>
+			<p>e - clear smoke sources</p>
+			<p>c - clear smoke</p>
+			<p>s - clear vector field</p>
+			<p>b - toggle background image visibility on/off</p>
+			<p>
+				<a class="button" href="video.html">Video</a> 
+				<a class="button" href="../doc/report.pdf">Report</a> 
+				<a class="button" href="source.html">Source Code</a> 
+			</p>
+			<a href="#" onclick="closeWindow()">Close</a>
+		</div>
+		<script src="../lib/three.min.js"></script>
+		<script src="../lib/OrbitControlsEnu.js"></script>
+		<script src="../lib/Detector.js"></script>
+		<script src="./cs274c.js"></script>
+		<script src="./fluid.js"></script>
+		<script src="./main.js"></script>
 
-</body>
+	</body>
 </html>
